modificaciones de ejercicios 1 y 2

--- a/1-EntradaSalida/EntradaSalida-3.html
+++ b/1-EntradaSalida/EntradaSalida-3.html
@@ -53,12 +53,12 @@
     <div class="aside animated bounceInUp">
      <h2>Enunciado:</h2>
 			
-				<h3>
-					al presionar el botón  'mostrar',
+				<h2>
+					al presionar el botón  'Mostrar',
 					</br>Debemos lograr tomar un dato por 'id' 
 					</br>y luego mostrarlo por 'ALERT' 
 					
-				</h3>
+				</h2>
 			
      
     </div>
