--- a/1-EntradaSalida/EntradaSalida-3.html
+++ b/1-EntradaSalida/EntradaSalida-3.html
@@ -42,7 +42,7 @@
 		<h1>Ingrese Su Nombre</h1>
 		<input type="text"  placeholder="Su nombre" id="elNombre">
 		  
-			<a  class="MiBotonUTNnav" onclick="mostrar()" >Mostrar</a>
+			<a  class="MiBotonUTNnav" onclick="Mostrar()" >Mostrar</a>
 			
 
 	</form>				
